# ironclaw-remote-shell-extension

./: .gitignore  Cargo.toml  README.md  install.sh
.zenflow/tasks/audit-the-complete-codebase-thor-5511/: investigation.md  plan.md
.zenflow/tasks/create-an-ironclaw-extension-tha-8829/: plan.md
remote-shell/: Cargo.toml  remote-shell.capabilities.json
remote-shell-gateway/: Cargo.toml
remote-shell-gateway/src/: main.rs
remote-shell/src/: lib.rs
skills/remote-shell/: SKILL.md
