[package]
name = "remote-shell-gateway"
version = "0.1.0"
edition = "2021"
description = "SSH gateway HTTP service for the IronClaw remote-shell extension"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
constant_time_eq = "0.3"
russh = "0.49"
russh-keys = "0.49"
ssh-key = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
